<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.yemyatthu.myappportfolio.MainActivity">
    <TextView
        style="@style/AppTheme.TitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_huge"
        android:text="@string/title_text"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:layout_margin="@dimen/padding_small"
        android:textAllCaps="true"
        android:background="@drawable/button_background"
        android:text="@string/spotify_streamer"/>
    <Button
        android:id="@+id/button2"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:layout_margin="@dimen/padding_small"
        android:textAllCaps="true"
        android:background="@drawable/button_background"
        android:text="@string/scores_app"/>
    <Button
        android:id="@+id/button3"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:layout_margin="@dimen/padding_small"
        android:textAllCaps="true"
        android:background="@drawable/button_background"
        android:text="@string/library_app"/>
    <Button
        android:id="@+id/button4"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:layout_margin="@dimen/padding_small"
        android:textAllCaps="true"
        android:background="@drawable/button_background"
        android:text="@string/build_it_bigger"/>
    <Button
        android:id="@+id/button5"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:layout_margin="@dimen/padding_small"
        android:textAllCaps="true"
        android:background="@drawable/button_background"
        android:text="@string/xyz_reader"/>
    <Button
        android:id="@+id/button6"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:layout_margin="@dimen/padding_small"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background2"
        android:text="@string/capstone"/>
</LinearLayout>
